--- a/assets/css/baris.css
+++ b/assets/css/baris.css
@@ -1,3 +1,6 @@
+/*--------------------------------------------------------------
+----baris-------
+--------------------------------------------------------------*/
 img{
     height:150px;
     width:100%;
@@ -56,3 +59,6 @@ img{
   .card:hover::before, .card:hover::after, .card:focus::before, .card:focus::after {
     transform: scale3d(1, 1, 1);
   }
+  /*--------------------------------------------------------------
+  ----baris-------
+  --------------------------------------------------------------*/
