--- a/assets/css/baris.css
+++ b/assets/css/baris.css
@@ -1,5 +1,7 @@
+/* Import Font */
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+/* Global Styles */
 * {
     margin: 0;
     padding: 0;
@@ -22,19 +24,21 @@ body {
     background-size: cover;
 }
 
+
 #cont {
     display: flex;
-    flex-wrap: nowrap; 
+    flex-wrap: wrap; 
     justify-content: center; 
-    gap: 20px; 
+    gap: 20px; /
     padding: 20px;
     overflow: hidden; 
 }
 
+/* Card Styling */
 .card {
     position: relative;
     background: #fff;
-    width: 250px; 
+    width: 250px; /* Fixed width for each card */
     margin: 20px;
     box-shadow: 0px 0px 30px 2px #000;
     overflow: hidden;
@@ -44,7 +48,14 @@ body {
 
 .card:hover {
     transform: scale(1.05);
-    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(241, 119, 4, 0.445) 0px -36px 30px 0px inset, rgba(228, 104, 4, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, 
+                rgba(241, 119, 4, 0.445) 0px -36px 30px 0px inset, 
+                rgba(228, 104, 4, 0.1) 0px -79px 40px 0px inset, 
+                rgba(0, 0, 0, 0.06) 0px 2px 1px, 
+                rgba(0, 0, 0, 0.09) 0px 4px 2px, 
+                rgba(0, 0, 0, 0.09) 0px 8px 4px, 
+                rgba(0, 0, 0, 0.09) 0px 16px 8px, 
+                rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 .card .header {
@@ -113,17 +124,33 @@ body {
     transition: background 250ms;
 }
 .card1 .header {
-  background-image: url('../img/baris/chiness.jpg'); 
+    background-image: url('../img/baris/chiness.jpg'); 
 }
 
 .card2 .header {
-  background-image: url('../img/baris/japan.webp'); 
+    background-image: url('../img/baris/japan.webp'); 
 }
 
 .card3 .header {
-  background-image: url('../img/baris/Korean\ Street\ Food.jpg'); 
+    background-image: url('../img/baris/Korean\ Street\ Food.jpg'); 
 }
 
 .card4 .header {
-  background-image: url('../img/baris/11-Best-Thai-Food-Dishes-Spicy-Salad-1120x732.jpg'); 
+    background-image: url('../img/baris/11-Best-Thai-Food-Dishes-Spicy-Salad-1120x732.jpg'); 
+}
+
+@media (max-width: 992px) {
+    #cont {
+        flex-wrap: wrap; 
+    }
+    .card {
+        width: calc(50% - 40px); 
+    }
+}
+
+@media (max-width: 576px) {
+    .card {
+        width: calc(100% - 40px); 
+        margin: 20px auto; 
+    }
 }
