--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,7 @@ h6 {
 .header {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 20px 0;
+  
   transition: all 0.5s;
   z-index: 997;
 }
@@ -91,7 +91,7 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 36px;
+  max-height: 150px;
   margin-right: 8px;
 }
 
@@ -107,6 +107,41 @@ h6 {
   color: var(--accent-color);
   font-size: 36px;
 }
+
+#sugoi{
+  width: 150px;
+  position: relative;
+  left: 0px;
+  top: 0px;
+  
+}
+#sugoi2{
+  width: 150px;
+  position: relative;
+  left:250px;
+  top: 0px;
+  webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  
+}
+
+.sousMenu li a{
+font-weight: 500px;  
+font-size: 500px;
+}
+
+@font-face {
+  font-family: 'Rami';
+  src: url('../fonts/kareudon/Rami.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+#posizioneNav ul li a{
+  font-family: 'Rami', Arial, sans-serif;
+  font-weight: bold;
+  color: black;
+}
+
 
 .header .btn-getstarted,
 .header .btn-getstarted:focus {
@@ -139,6 +174,13 @@ h6 {
   .header .navmenu {
     order: 3;
   }
+
+  #sugoi{
+    display: none;
+  }
+  #sugoi2{
+    display: none;
+  }
 }
 
 .scrolled .header {
@@ -154,12 +196,25 @@ h6 {
     padding: 0;
   }
 
+  .iconR{
+    width: 45px;
+    padding-right: 10px;
+  }
+
+  .sousMenu li a{
+    font-weight: 500px;  
+    font-size: 1px;
+    }
+    
+
   .navmenu ul {
     margin: 0;
     padding: 0;
     display: flex;
     list-style: none;
     align-items: center;
+    position: relative;
+    right: 180px;
   }
 
   .navmenu li {
@@ -178,7 +233,7 @@ h6 {
   .navmenu a,
   .navmenu a:focus {
     color: var(--nav-color);
-    font-size: 15px;
+    font-size: 35px;
     padding: 0 2px;
     font-family: var(--nav-font);
     font-weight: 500;
@@ -291,6 +346,10 @@ h6 {
     transition: color 0.3s;
   }
 
+  .iconR{
+    display: none;
+  }
+
   .navmenu {
     padding: 0;
     z-index: 9997;
@@ -316,7 +375,7 @@ h6 {
     color: var(--nav-dropdown-color);
     padding: 10px 20px;
     font-family: var(--nav-font);
-    font-size: 17px;
+    font-size: 28px;
     font-weight: 500;
     display: flex;
     align-items: center;
@@ -428,7 +487,7 @@ h6 {
 }
 
 .footer h4 {
-  font-size: 50px;
+  font-size: 16px;
   font-weight: 700;
   margin-bottom: 15px;
 }
@@ -661,7 +720,7 @@ section,
   font-weight: 800;
   font-style: normal;
 }
-
+ 
 .hero {
   background: linear-gradient(180deg,#FF8914 0%, #FF8914 5%,#ff2147 100%);
   width: 100%;
@@ -671,21 +730,21 @@ section,
   display: flex;
   align-items: center;
 }
-
+ 
 .hero h1 {
   margin: 0;
   font-size: 84px;
   font-weight: 700;
   font-family: Guigui;
 }
-
+ 
 .hero p {
   color: color-mix(in srgb, var(--default-color), transparent 30%);
   margin: 5px 0 30px 0;
   font-size: 20px;
   font-weight: 400;
 }
-
+ 
 .hero .btn-get-started {
   color: var(--contrast-color);
   background: var(--accent-color);
@@ -698,13 +757,13 @@ section,
   transition: 0.5s;
   box-shadow: 0 8px 28px color-mix(in srgb, var(--accent-color), transparent 80%);
 }
-
+ 
 .hero .btn-get-started:hover {
   color: var(--contrast-color);
   background: color-mix(in srgb, var(--accent-color), transparent 15%);
   box-shadow: 0 8px 28px color-mix(in srgb, var(--accent-color), transparent 55%);
 }
-
+ 
 .hero .btn-watch-video {
   font-size: 16px;
   transition: 0.5s;
@@ -712,7 +771,7 @@ section,
   color: var(--default-color);
   font-weight: 500;
 }
-
+ 
 .hero .btn-watch-video i {
   color: var(--accent-color);
   font-size: 32px;
@@ -720,42 +779,42 @@ section,
   line-height: 0;
   margin-right: 8px;
 }
-
+ 
 .hero .btn-watch-video:hover {
   color: var(--accent-color);
 }
-
+ 
 .hero .btn-watch-video:hover i {
   color: color-mix(in srgb, var(--accent-color), transparent 15%);
 }
-
+ 
 .hero .animated {
   animation: up-down 2s ease-in-out infinite alternate-reverse both;
 }
-
+ 
 @media (max-width: 640px) {
   .hero h1 {
     font-size: 28px;
     line-height: 36px;
   }
-
+ 
   .hero p {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
   }
-
+ 
   .hero .btn-get-started,
   .hero .btn-watch-video {
     font-size: 13px;
   }
 }
-
+ 
 @keyframes up-down {
   0% {
     transform: translateY(10px);
   }
-
+ 
   100% {
     transform: translateY(-10px);
   }
