--- a/membres/Anthony/recette/anthony.css
+++ b/membres/Anthony/recette/anthony.css
@@ -1,9 +1,27 @@
-#backgroundSushi{
-    background-image: url("seafood-sushi-dish-with-details-simple-black-background.jpg");
-    height: 500px;
-   background-size: cover;
-   background-repeat: no-repeat;
-   background-attachment: fixed;
+@font-face {
+   font-family: 'kareudon';
+   src: url('../recette/assets/fonts/kareudon/Rami.ttf') format('truetype');
+   font-weight: 800;
+   font-style: normal;
+}
 
-  
+#titreRecette {
+   font-family: 'kareudon', sans-serif;
+   font-weight: bold;
+   font-size: 55px;
+
+
+}
+
+.spanRouge {
+   font-size: 90px;
+   color: #610202;
+}
+
+
+#sushi {
+   width: 80%;
+   height: 450px;
+   border-radius: 20px;
+
 }
