--- a/assets/css/baris.css
+++ b/assets/css/baris.css
@@ -2,8 +2,8 @@
 
 .card {
     position: relative;
-    background: #fff;
-    width: 250px; 
+    /*background: #fff;*/
+    width: 250px;
     margin: 20px;
     box-shadow: 0px 0px 30px 2px #000;
     overflow: hidden;
@@ -139,7 +139,7 @@
 /* Card Styling */
 .card {
     position: relative;
-    background: #fff;
+    /*background: #fff;*/
     width: 250px; /* Fixed width for each card */
     margin: 20px;
     box-shadow: 0px 0px 30px 2px #000;
