--- a/membres/Anthony/recette/anthony.css
+++ b/membres/Anthony/recette/anthony.css
@@ -17,11 +17,22 @@
    font-size: 90px;
    color: #610202;
 }
-
+.spanIngredients{
+   font-size: 50px;
+   color: #610202;
+}
 
 #sushi {
-   width: 80%;
+   width: 70%;
    height: 450px;
    border-radius: 20px;
 
+}
+#ingredients{
+   margin-left: 15%;
+}
+
+.iconeRond{
+   width:25px;
+   height:25px;
 }
