--- a/membres/baris/csss.css
+++ b/membres/baris/csss.css
@@ -21,3 +21,66 @@ body{
 .ingre{
     font-size: 2em; 
 }
+
+.recettee {
+    text-align: center;
+    font-size: 6vh;
+    padding: 20px;
+ 
+    border: solid 2px #000;
+    border-radius: 20px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 40px;
+    color: #333;
+}
+.etape-preparation {
+    border-bottom: solid 2px #000;
+    padding-bottom: 10px;
+}
+.img-container {
+    border: solid 2px #000;
+    max-width: 100%;
+    text-align: center;
+    margin-top: 20px;
+}
+.img-container img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+}
+.legende-image {
+    font-style: italic;
+    text-align: center;
+    margin-top: 10px;
+    color: #666;
+}
+.container {
+    margin-top: 20px;
+}
+ol {
+    counter-reset: steps;
+    padding-left: 0;
+}
+ol li {
+    list-style-type: none;
+    counter-increment: steps;
+    margin-bottom: 10px;
+    position: relative;
+    padding-left: 30px;
+}
+ol li:before {
+    content: counter(steps);
+    color: #333;
+    background-color: #f8f9fa;
+    border: 2px solid #000;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    text-align: center;
+    line-height: 18px;
+    position: absolute;
+    left: 0;
+    top: 1px;
+}
