--- a/membres/baris/csss.css
+++ b/membres/baris/csss.css
@@ -26,7 +26,6 @@ body{
     text-align: center;
     font-size: 6vh;
     padding: 20px;
- 
     border: solid 2px #000;
     border-radius: 20px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -84,3 +83,27 @@ ol li:before {
     left: 0;
     top: 1px;
 }
+
+
+.bsb-hero-1 {
+    height: 600px; /* Hauteur ajustée pour l'exemple */
+    background-size: cover;
+    background-position: center;
+  }
+  .recettee {
+    border: solid black;
+    border-radius: 20px;
+    text-align: center;
+    padding: 20px;
+  }
+  .ingre, .etape-preparation {
+    border: solid black;
+    text-align: center;
+    padding: 10px;
+  }
+  .img-container {
+    text-align: center;
+  }
+  .legende-image {
+    text-align: center;
+  }
