--- a/membres/baris/csss.css
+++ b/membres/baris/csss.css
@@ -5,11 +5,16 @@ body{
     background-size: cover;
 }
 
-#imgg{
+#imggg{
    
-    max-width: 100%;
-    max-height: 95%;
+   max-width: auto;
+   max-height: auto;
+   margin-left: -18px;
+
+
 }
+
+
 
 #poulet, #pate, #sauce, #garni {
     font-size: 2em; 
@@ -84,11 +89,31 @@ ol li:before {
     top: 1px;
 }
 
-
 .bsb-hero-1 {
     height: 600px; /* Hauteur ajustée pour l'exemple */
+    overflow: hidden; /* Masque tout contenu qui dépasse */
+    position: relative; /* Position relative pour les enfants absolus */
+  }
+  .bsb-hero-1::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('l-intro-1687386179.jpg');
     background-size: cover;
     background-position: center;
+    z-index: -1; /* Placez l'élément derrière le contenu principal */
+    transition: transform 0.5s ease-out; /* Transition fluide */
+    transform: scale(1); /* État initial */
+  }
+  .bsb-hero-1:hover::before {
+    transform: scale(1.1); /* Zoom de 10% au survol */
+  }
+  .container {
+    position: relative; /* Assurez-vous que le contenu reste empilé au-dessus */
+    z-index: 1; /* Placez le contenu au-dessus de l'image de fond */
   }
   .recettee {
     border: solid black;
